--- a/src/slot/Slot.module.css
+++ b/src/slot/Slot.module.css
@@ -1,14 +1,29 @@
 .slot_wrapper {
-   width: 84px;
-   height: 96px;
-   /*clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);*/
-   background-color: aqua;
-   padding: 4px;
-}
-
-.slot_content {
+   width: 100%;
    height: 100%;
-   /*clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);*/
-   background-color: yellow;
+   position: relative;
 }
 
+.slot_border {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   padding: 3px;
+   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
+
+.slot_champion_img {
+   height: 100%;
+   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+   background-color: yellow;
+   background-size: contain;
+}
+
+/**
+ * wrapper 에 호버 시, star_level 의 visibility 를 visible 로 변경
+ */
+.slot_wrapper:hover div[id=star_level] {
+   visibility: visible;
+}
